# hrms-pbs

./: .dockerignore  .env.example  .env.staging.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .prettierignore  ACTIVATION_EMAIL_FIX_SUMMARY.md  ACTIVATION_EMAIL_TROUBLESHOOTING.md  ADMIN_HOLIDAY_WEEKOFF_GUIDE.md  ATTENDANCE_HOURS_FIX_SUMMARY.md  ATTENDANCE_REPORT_FINAL_UPDATES.md  ATTENDANCE_REPORT_IMPROVEMENTS.md  ATTENDANCE_SYNC_GUIDE.md  ATTENDANCE_SYSTEM_COMPLETE_GUIDE.md  CLOCK_IN_BASED_ATTENDANCE_LOGIC.md  CLOCK_IN_OUT_FIXES_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DOCUMENT_UPLOAD_FIXES.md  DOCUMENT_UPLOAD_FIXES_COMPLETE.md  Dockerfile  EARNED_LEAVE_REMOVAL_SUMMARY.md  EMAIL_CHANGES_SUMMARY.md  EMAIL_CONFIGURATION.md  EMAIL_TEMPLATES_GUIDE.md  EMAIL_TEMPLATES_UPDATE.md  EMERGENCY_CONTACTS_TEMPLATE_SECTION.html  EMERGENCY_CONTACT_VIEWS.py  HOME_PAGE_TIMELINE_UPDATES.md  IMMEDIATE_HEIGHT_FIX.js  LEAVE_ALLOCATION_SYSTEM_GUIDE.md  LEAVE_REGULARIZATION_EMAIL_CONFIG.md  MERGE_COMPLETION_SUMMARY.md  QUICK_FIX_STEPS.txt  QUICK_SETUP.md  QUICK_START.md  README.md  TASK_6_COMPLETION_SUMMARY.md  TIMEZONE_AWARE_CLOCKIN_COMPLETE.md  (+86 more)
.agent/: LOCATION_TRACKING_GUIDE.md
.gemini/: KEKA_REDESIGN_COMPLETE.md  KEKA_REDESIGN_FINAL_SUMMARY.md  KEKA_STYLE_REDESIGN.md  REDESIGN_COMPLETE_SUMMARY.md  RESUME_PARSER_ENHANCEMENT_PLAN.md  ai_features_enhancement_summary.md  redesign_progress.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: code-quality.yml  deploy-staging.yml  setup-precommit.yml
_logs/: hrms_structured.json
accounts/: admin.py  backends.py  models.py  urls.py  views.py
accounts/management/: __init__.py
accounts/management/commands/: create_test_user.py
accounts/migrations/: 0001_initial.py  0002_auto_20260128_1715.py  0002_user_must_change_password.py  0003_alter_user_role.py
ai_assistant/: admin.py  ai_utils.py  apps.py  attendance_intelligence.py  enhanced_resume_parser.py  leave_prediction.py  models.py  smart_notifications.py  urls.py  views.py
ai_assistant/migrations/: 0001_initial.py  0002_resumeparsingjob_candidate_type_and_more.py  0003_chatmessage.py
companies/: admin.py  announcement_model.py  forms.py  models.py  shift_models.py  shift_views.py  tests_location.py  urls.py  views.py
companies/management/: __init__.py
companies/migrations/: 0001_initial.py  0002_holiday.py  0003_remove_company_domain_company_address_line1_and_more.py  0004_alter_company_location_shifttiming.py  0005_shiftschedule.py  0006_alter_holiday_location_location.py  0007_rename_companies_h_company_f6931c_idx_companies_h_company_a18c66_idx_and_more.py  0008_announcement.py  0009_shiftschedule_allowed_late_logins_and_more.py  0010_company_currency.py  0011_locationweekoff.py  0012_company_hr_email_company_hr_email_name_and_more.py  0013_department_designation.py  0014_alter_company_domains.py  0015_announcement_image.py  0016_location_currency.py  0017_location_address_line1_location_address_line2_and_more.py  0018_auto_update_location_currency.py  0019_auto_20260128_1715.py
core/: api_urls.py  apps.py  attendance_reports.py  context_processors.py  decorators.py  email_scheduler.py  email_utils.py  error_handling.py  forms.py  middleware.py  models.py  signals.py  urls.py  utils.py  views.py  views_append.py
core/migrations/: 0001_initial.py  0002_notification.py  0003_auto_20260128_1715.py
employees/: admin.py  api.py  forms.py  inline_views.py  location_tracking_views.py  models.py  multi_step_forms.py  multi_step_views.py  payroll_utils.py  serializers.py  timezone_utils.py  urls.py  utils.py  views.py
employees/migrations/: 0001_initial.py  0002_add_session_tracking_fields.py  0002_employee_account_number_employee_badge_id_and_more.py  0003_add_missing_attendance_fields.py  0003_locationlog_attendance.py  0004_alter_locationlog_options_locationlog_accuracy_and_more.py  0004_employeeidproof.py  0005_employee_profile_picture.py  0005_merge_20260113_1145.py  0006_leaverequest_leavebalance.py  0006_update_max_sessions_to_3.py  0007_alter_leaverequest_leave_type.py  0007_update_existing_max_sessions.py  0008_employee_annual_ctc_payslip.py  0008_fix_duplicate_column_migration.py  0009_attendance_total_working_hours_and_more.py  0009_handbooksection_policysection.py  0010_alter_attendance_status.py  0010_reset_migration_state_for_staging.py  0011_alter_leaverequest_options_and_more.py  0011_fix_locationlog_schema.py  0012_employee_location.py  0012_remove_el_co_fields.py  0013_alter_leaverequest_leave_type.py  0013_remove_employee_shift_and_more.py  0014_leaverequest_approval_type.py  0014_regularizationrequest.py  0015_employee_last_anniversary_email_year_and_more.py  0015_employee_location_new_alter_employee_location.py  0016_employee_current_address_employee_profile_edited.py  0016_remove_employee_location_new_alter_employee_location.py  0017_alter_employee_shift_schedule.py  0017_employee_personal_email.py  0018_attendance_is_grace_used_attendance_is_half_day_late_and_more.py  0018_merge_20260121_1520.py  0019_add_half_day_duration_options.py  0019_alter_employee_manager.py  0020_alter_attendance_options_and_more.py  0020_payslip_basic_payslip_employee_pf_and_more.py  0021_employee_employment_status_employee_exit_date_and_more.py  (+22 more)
handbooks/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
handbooks/migrations/: 0001_initial.py
handbooks/templatetags/: handbook_tags.py
hrms_core/: asgi.py  logging_config.py  posthog_config.py  settings.py  urls.py  wsgi.py
policies/: forms.py  models.py  urls.py  views.py
policies/migrations/: 0001_initial.py
scripts/: check_debug_statements.py  check_env_example.py  check_migrations.py  django_checks.py  docker-entrypoint.sh  post_clone_setup.ps1  post_clone_setup.sh  setup_precommit.py
static/css/: add-employee-responsive.css  employee-profile-enhanced-responsive.css  global-responsive.css  responsive.css
static/js/: background-location-tracker.js  employee-profile-enhanced-responsive.js  responsive.js  sw.js
superadmin/: decorators.py  urls.py  utils.py  views.py
(+153 files in other folders)
