[project]
name = "hrms-pbs"
version = "1.0.0"
description = "HRMS PBS - Human Resource Management System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core Django and Web Framework
    "django>=4.2.0,<5.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    # Django Extensions
    "django-cors-headers>=4.9.0",
    "django-environ>=0.12.0",
    "django-import-export>=4.3.0",
    "django-widget-tweaks>=1.5.0",
    # API Documentation
    "drf-yasg>=1.21.0",
    # Database
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "django-redis>=6.0.0",
    # File Processing (Excel only - actually used)
    "openpyxl>=3.1.0",
    "pypdf2>=3.0.0",
    # Utilities
    "python-dateutil>=2.9.0",
    "pytz>=2024.1",
    "python-slugify>=8.0.0",
    "phonenumbers>=8.13.0",
    # HTTP/API Clients
    "requests>=2.32.0",
    # Data Processing (only pandas is used)
    "pandas>=2.2.0",
    "tablib>=3.9.0",
    # Image Processing
    "pillow>=11.0.0",
    # Server
    "gunicorn>=23.0.0",
    "whitenoise>=6.11.0",
    "timezonefinder>=8.2.1",
    "posthog>=7.5.1",
    "loguru>=0.7.3",
    "openai>=1.0.0",
    "xhtml2pdf>=0.2.16",
    "reportlab>=4.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-django>=4.11.0",
    "factory-boy>=3.3.0",
    "coverage>=7.11.0",
    "black>=24.10.0",
    "flake8>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["accounts", "ai_assistant", "companies", "core", "employees", "hrms_core", "superadmin", "scripts"]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-django>=4.11.0",
    "factory-boy>=3.3.0",
    "coverage>=7.11.0",
    "black>=24.10.0",
    "flake8>=7.1.0",
    "pre-commit>=4.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
# Ruff configuration for linting and formatting
line-length = 120
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*/migrations/*",
    "staticfiles",
    "media",
    "_logs",
    ".ruff_cache",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from
    "ARG001", # unused function argument
    "ARG002", # unused method argument
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"*/tests/*.py" = ["ARG001", "ARG002"]  # unused arguments in tests
"*/migrations/*.py" = ["E501"]  # long lines in migrations

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
